--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -37,10 +37,8 @@
 			<section>
         <div class="billede-container">
           <div class="billede-flex">
-            <img class="billedgalleri" src="images/1.jpg">
-            <img class="billedgalleri" src="images/2.jpg">
-            <img class="billedgalleri" src="images/3.jpg">
-            <img class="billedgalleri" src="images/4.jpg">
+            <img class="billedgalleri" src="images/1-1.jpg">
+            <img class="billedgalleri" src="images/2-1.jpg">
           </div>
         </div>
       </section>
