--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -37,7 +37,7 @@
 			<section>
         <div class="billede-container">
           <div class="billede-flex">
-            <img class="billedgalleri" src="images/1-1.jpg">
+            <img class="billedgalleri" src="images/1-1.gif">
             <img class="billedgalleri" src="images/2-1.jpg">
           </div>
         </div>
