--- a/zarp4/index.html
+++ b/zarp4/index.html
@@ -24,8 +24,9 @@
       <div class="menu">
 
         <a href="musik.html" title="Musik">Musik</a>
+        <a href="koncerter.html" title="Koncerter">Koncerter</a>
         <a href="lyrik.html" title="Lyrik">Lyrik</a>
-      <a href="kontakt.html" title="Kontakt">Kontakt</a>
+        <a href="kontakt.html" title="Kontakt">Kontakt</a>
       </div>
     </nav>
 
