--- a/zarp4/lyrik.html
+++ b/zarp4/lyrik.html
@@ -23,6 +23,7 @@
       <div class="menu">
 
         <a href="musik.html" title="Musik">Musik</a>
+        <a href="koncerter.html" title="Koncerter">Koncerter</a>
         <a href="lyrik.html" title="Lyrik">Lyrik</a>
         <a href="kontakt.html" title="Kontakt">Kontakt</a>
       </div>
