--- a/zarp4/koncerter.html
+++ b/zarp4/koncerter.html
@@ -36,8 +36,17 @@
 <h1> KONCERTER </h1>
 
 <section class="koncertliste">
-<p> D. 5 DECEMBER - TRAIN, AARHUS  //  KØB BILLET <a href="https://www.ticketmaster.dk/event/T201205A" title="Billetter">HER</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
-<p> D. 11 DECEMBER - PUMPEHUSET, KØBENHAVN  //  KØB BILLET <a href="https://www.billetto.dk/e/zar-paulo-billetter-486061" title="Billetter">HER</a> </p>
+<p> D. 12 FEBRUAR - PUMPEHUSET, KØBENHAVN  //  KØB BILLET <a href="https://www.billetto.dk/e/zar-paulo-harko-billetter-486061" title="Billetter">HER</a> <!--// <a href="tel:+4522583530">(+45) 22 58 35 30</a>--> </p>
+<p> D. 5 MARTS - MEJERIET, SØNDERBORG  //  KØB BILLET <a href="https://www.ticket.livebackend.com/sonderborghus/e/zar-paulo/" title="Billetter">HER</a> </p>
+<p> D. 6 MARTS - DRIVHUSET, SKIVE  //  KØB BILLET <a href="https://www.billetto.dk/e/zar-paulo-det-indre-marked-drivhuset-billetter-502982" title="Billetter">HER</a> </p>
+<p> D. 11 MARTS - GIMLE, ROSKILDE  //  KØB BILLET <a href="https://www.ticket.livebackend.com/gimle/e/zar-paulo/" title="Billetter">HER</a> </p>
+<p> D. 12 MARTS - RICHTER, GLADSAXE  //  KØB BILLET <a href="https://www.richter-gladsaxe.dk/k/soen-zar-paulo/" title="Billetter">HER</a> </p>
+<p> D. 13 MARTS - SUBHUSET, HOLSTEBRO  //  KØB BILLET <a href="https://www.billetto.dk/e/subhuset-x-zar-paulo-billetter-502966" title="Billetter">HER</a> </p>
+<p> D. 19 MARTS - TAPPERIET, KØGE  //  KØB BILLET <a href="https://www.ticketmaster.dk/event/493423?language=da-dk&clickId=S7xz7IyA5xyOU-wwUx0Mo3ERUkEy6PW7BzaAXA0&irgwc=1&utm_source=GigGum&utm_medium=affiliate&utm_campaign=380623&utm_content=1049986_7521" title="Billetter">HER</a> </p>
+<p> D. 20 MARTS - WALTHERS MUSIKCAFÉ, SKANDERBORG  //  KØB BILLET <a href="https://www.smukbillet.safeticket.dk/zarpaulo" title="Billetter">HER</a> </p>
+<p> D. 26 MARTS - CAFÉ VON HATTEN, RANDERS  //  KØB BILLET <a href="https://www.ticketmaster.dk/event/492995?clickId=S7xz7IyA5xyOU-wwUx0Mo3ERUkEy6PXjBzaAXA0&irgwc=1&utm_source=GigGum&utm_medium=affiliate&utm_campaign=380623&utm_content=1049986_7521" title="Billetter">HER</a> </p>
+<p> D. 27 MARTS - TRAIN, AARHUS  //  KØB BILLET <a href="https://www.ticketmaster.dk/event/494593?language=da-dk&camefrom=traindk&brand=dk_train&clickId=S7xz7IyA5xyOU-wwUx0Mo3ERUkEy6KxaBzaAXA0&irgwc=1&utm_source=GigGum&utm_medium=affiliate&utm_campaign=380623&utm_content=1049986_7521" title="Billetter">HER</a> </p>
+<p> D. 9 APRIL - KULTURMASKINEN, ODENSE  //  KØB BILLET <a href="https://www.ticket.livebackend.com/kulturmaskinen/e/27174/" title="Billetter">HER</a> </p>
 </section>
 
 
